# databricks-ds-assistant

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: config.sample.yaml  uc_functions_setup.sql  usage_example.py
notebooks/: deploy_ds_assistant_agent.py
scripts/: build_wheel.sh
src/ds_assistant/: __init__.py
src/ds_assistant/agents/: ds_agent_framework.py  orchestrator.py
src/ds_assistant/common/: schemas.py  state.py  util_io.py
src/ds_assistant/tools/: __init__.py  data_connector.py  data_profiling.py  intelligent_tools.py  recommender.py  relationships.py  report_builder.py  timeseries.py
