[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ds-assistant"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6","pandas>=2.2","polars>=0.20","numpy>=1.26",
  "scikit-learn>=1.5","statsmodels>=0.14","matplotlib>=3.8",
  "fastapi>=0.111","uvicorn>=0.30","mlflow>=3.0","mcp>=1.7",
  "databricks-sdk>=0.31","databricks-mcp>=0.1.2","jinja2>=3.1"
]

[tool.setuptools.packages.find]
where = ["src"]
